--- a/animals.html
+++ b/animals.html
@@ -14,7 +14,25 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>    
 </head>    
 <body>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2" style="background-color:lavenderblush;">C</div>
+            <div class="col-sm-2" style="background-color:lavenderblush;">H</div>
+            <div class="col-sm-2" style="background-color:lavenderblush;">E</div>
+            <div class="col-sm-2" style="background-color:lavenderblush;">E</div>
+            <div class="col-sm-2" style="background-color:lavenderblush;">G</div>
+            <div class="col-sm-2" style="background-color:lavenderblush;">M</div>
+        </div>
+        <div class="row">
+            <div class="col-md" style="background-color:lavender;">Chicken</div>
+            <div class="col-md" style="background-color:lavender;">Hammerhead Shark</div>
+            <div class="col-md" style="background-color:lavender;">Elephant</div>
+            <div class="col-md" style="background-color:lavender;">Eagle</div>
+            <div class="col-md" style="background-color:lavender;">Gorilla</div>
+            <div class="col-md" style="background-color:lavender;">Markhor</div>
+        </div>
+    </div>
+    The animals names will break first compared to the letters because md requires more width to stay horizontal compared to sm.
 
 
 </body>
