--- a/animals.html
+++ b/animals.html
@@ -33,7 +33,24 @@
         </div>
     </div>
     The animals names will break first compared to the letters because md requires more width to stay horizontal compared to sm.
-
+    <br>
+    <br>
+    <hr>
+    <div class="container">
+      <h2>Responsive</h2>
+      <img src="eagle.jpg" class="img-fluid" alt="eagle">
+      <img src="hammerhead-shark.jpg" class="img-fluid" alt="hammerhead shark" width="300">
+      <img src="markhor.jpg" class="img-fluid" alt="markhor">
+    </div>
+    <br>
+    <br>
+    <hr>
+    <div class="container">
+      <h2>Thumbnail</h2>
+      <img src="eagle.jpg" class="img-thumbnail" alt="eagle">
+      <img src="hammerhead-shark.jpg" class="img-thumbnail" alt="hammerhead shark" width="300">
+      <img src="markhor.jpg" class="img-thumbnail" alt="markhor">
+    </div>
 
 </body>
 </html>
