--- a/animals.html
+++ b/animals.html
@@ -51,6 +51,61 @@
       <img src="hammerhead-shark.jpg" class="img-thumbnail" alt="hammerhead shark" width="300">
       <img src="markhor.jpg" class="img-thumbnail" alt="markhor">
     </div>
+    <br>
+    <hr>
+    <br>
+    <h2>Table</h2>
+    <div class="table-responsive">
+      <table class="table table-striped table-hover">
+        <caption>Animals, city, cars of same starting letters</caption>
+        <thead class="table-dark">
+          <tr>
+            <th>Letter</th>
+            <th>Animal</th>
+            <th>City</th>
+            <th>Car</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">C</th>
+            <td>Chicken</td>
+            <td>Charlotte</td>
+            <td>Cadillac</td>
+          </tr>
+          <tr>
+            <th scope="row">H</th>
+            <td>Hammerhead Shark</td>
+            <td>Honolulu</td>
+            <td>Honda</td>
+          </tr>
+          <tr>
+            <th scope="row">E</th>
+            <td>Elephant</td>
+            <td>Elizabeth</td>
+            <td>Exeed</td>
+          </tr>
+          <tr>
+            <th scope="row">E</th>
+            <td>Eagle</td>
+            <td>El Monte</td>
+            <td>Elfin</td>
+          </tr>
+          <tr>
+            <th scope="row">G</th>
+            <td>Gorilla</td>
+            <td>Garland</td>
+            <td>Galpin</td>
+          </tr>
+          <tr>
+            <th scope="row">M</th>
+            <td>Markhor</td>
+            <td>Miami</td>
+            <td>Maserati</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
 </body>
 </html>
