--- a/animals.html
+++ b/animals.html
@@ -106,6 +106,35 @@
         </tbody>
       </table>
     </div>
-
+    <br>
+    <hr>
+    <br>
+    <h2>Buttons and Nav Bar</h2>
+    <p>
+      green = success
+    </p>
+    <p>
+      yellow = warning
+    </p>
+    <p>
+      red = danger 
+    </p>
+    <nav class="navbar bg-light">
+    <div class="btn-toolbar">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <div class="btn-group">
+        <button type="button" class="btn btn-success">E</button>
+        <button type="button" class="btn btn-success">H</button>
+        <button type="button" class="btn btn-success">M</button>
+      </div>
+      <div class="btn-group">
+        <button type="button" class="btn btn-warning">E</button>
+        <button type="button" class="btn btn-warning">G</button>
+      </div>
+      <div class="btn-group">
+        <button type="button" class="btn btn-danger">C</button>
+      </div>
+    </div>
+  </nav>
 </body>
 </html>
