--- a/animals.html
+++ b/animals.html
@@ -121,7 +121,6 @@
     </p>
     <nav class="navbar bg-light">
     <div class="btn-toolbar">
-      <a class="navbar-brand" href="#">Navbar</a>
       <div class="btn-group">
         <button type="button" class="btn btn-success">E</button>
         <button type="button" class="btn btn-success">H</button>
@@ -135,6 +134,32 @@
         <button type="button" class="btn btn-danger">C</button>
       </div>
     </div>
-  </nav>
-</body>
+    </nav>
+    <br>
+    <hr>
+    <br>
+    <div class="dropdown">
+      <div class="dropdown-toggle">
+        <a href="#" role="button" data-bs-toggle="dropdown">
+          Dropdown
+        </a>
+        <div class="btn-group">
+          <button type="button" class="btn btn-success">E</button>
+          <button type="button" class="btn btn-success">H</button>
+          <button type="button" class="btn btn-success">M</button>
+        </div>
+        <div class="btn-group">
+          <button type="button" class="btn btn-warning">E</button>
+          <button type="button" class="btn btn-warning">G</button>
+        </div>
+        <div class="btn-group">
+          <button type="button" class="btn btn-danger">C</button>
+        </div>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="plane.html">Plane</a></li>
+          <li><a class="dropdown-item" href="train.html">Train</a></li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
