--- a/animals.html
+++ b/animals.html
@@ -138,6 +138,7 @@
     <br>
     <hr>
     <br>
+    <h2>Dropdown</h2>
     <div class="dropdown">
       <div class="dropdown-toggle">
         <a href="#" role="button" data-bs-toggle="dropdown">
