--- a/animals.html
+++ b/animals.html
@@ -14,6 +14,23 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>    
 </head>    
 <body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <a class="navbar-brand" href="animals.html">Interesting Animals</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="plane.html">Plane</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="train.html">Train</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <br>
     <div class="container">
         <div class="row">
             <div class="col-sm-2" style="background-color:lavenderblush;">C</div>
