--- a/animals.html
+++ b/animals.html
@@ -179,5 +179,26 @@
         </ul>
       </div>
     </div>
+    <br>
+    <hr>
+    <br>
+    <h2>Proto Form</h2>
+    <br>
+    <form>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" style="width:200px">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputText1" class="form-label">Animal</label>
+        <input type="text" class="form-control" id="exampleInputText1" placeholder="Enter your animal" style="width:200px">
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </body>
 </html>
